DF theme: fix flickering at tx page

--- a/apps/block_scout_web/assets/css/_layout.scss
+++ b/apps/block_scout_web/assets/css/_layout.scss
@@ -1,7 +1,3 @@
-html {
-  background-color: #080808;
-}
-
 .layout-container {
   display: flex;
   flex-direction: column;
