--- a/apps/block_scout_web/assets/css/app.scss
+++ b/apps/block_scout_web/assets/css/app.scss
@@ -1,5 +1,9 @@
 @import "./mixins";
 
+html {
+  background-color: #080808;
+}
+
 /* Phoenix flash messages */
 .alert:empty {
   display: none;
